clusters/pi-cluster/apps/nextcloud.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd
  name: nextcloud
  namespace: default
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      annotations:
        traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd
      labels:
        app: nextcloud
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 2000
      containers:
      - name: nextcloud
        image: nextcloud:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nextcloud-data
          mountPath: /var/www/html
      volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-data
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd
  name: nextcloud
  namespace: default
spec:
  selector:
    app: nextcloud
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd
  name: nextcloud
  namespace: default
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - nextcloud.k3s.tophermayor.com
    secretName: wildcard-tophermayor-tls
  rules:
  - host: nextcloud.k3s.tophermayor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 80
